--- a/base-3.css
+++ b/base-3.css
@@ -50,7 +50,7 @@ h1 {
 /* Mobiles */
 @media all and (max-width:767px) {
     h1 { 
-    color:red;	
+    color:black;	
     text-align: center;	
 	padding-left:4%;
 	padding-right: 6%;
@@ -70,11 +70,11 @@ h1 {
 
 h2 {
     font-family: serif;
-    font-size:38px;
+    font-size:24px;
     font-weight:bold;
     line-height:1.3;
-    margin-top:40px;
-    margin-bottom:12px;
+    margin-top:32px;
+    margin-bottom:6px;
 }
 
 /* Mobiles */
@@ -122,6 +122,63 @@ h3 {
 
     }  
 }
+
+
+h4 {
+    font-family: serif;
+    font-size:24px;
+    font-weight:bold;
+    line-height:1.3;
+    margin-top:32px;
+    margin-bottom:6px;
+}
+
+/* Mobiles */
+@media all and (max-width:767px) {
+    h4 { 
+    padding-left:4%;
+    padding-right: 6%;
+
+    }
+}
+
+/* Desktop */
+@media all and (min-width:768px) {
+    h4 { 
+    padding-left: 2%;
+    padding-right: 4%;
+
+    }  
+
+
+
+h5 {
+    font-family: serif;
+    font-size:24px;
+    font-weight:bold;
+    line-height:1.3;
+    margin-top:32px;
+    margin-bottom:6px;
+}
+
+/* Mobiles */
+@media all and (max-width:767px) {
+    h5 { 
+    padding-left:4%;
+    padding-right: 6%;
+
+    }
+}
+
+/* Desktop */
+@media all and (min-width:768px) {
+    h5 { 
+    padding-left: 2%;
+    padding-right: 4%;
+
+    }  
+
+
 
 /* ==== PARAGRAPHS ==== */
 p {
