--- a/fonts.css
+++ b/fonts.css
@@ -1,21 +1,21 @@
 /* ==== BROWSER RESETS  ==== */
 * { padding: 0;
-	margin: 0;
-	border: 0;
-	font-weight: normal;
-	font-size: 16px }
+    margin: 0;
+    border: 0;
+    font-weight: normal;
+    font-size: 16px }
 
-	body, html { height: 100% }	
+    body, html { height: 100% } 
 
-	body, html { height: 100% }	
+    body, html { height: 100% } 
 
 body { max-width: 1600px; margin: 0 auto }
 
 /* ==== BODY SPACING  ==== */
 
 body { 
-	padding-left: 20%;
-	padding-right: 20%;
+    padding-left: 20%;
+    padding-right: 20%;
 
 }
 
@@ -23,8 +23,8 @@ body {
 /* Mobiles */
 @media all and (max-width:767px) {
     body { 
-	padding-left: 6%;
-	padding-right: 6%;
+    padding-left: 6%;
+    padding-right: 6%;
 
     }
 }
@@ -32,8 +32,8 @@ body {
 /* Desktop */
 @media all and (min-width:768px) {
     body { 
-	padding-left: 20%;
-	padding-right: 20%;
+    padding-left: 20%;
+    padding-right: 20%;
 
     } 
 }
@@ -42,9 +42,9 @@ body {
 /* ==== HEADINGS  ==== */
 
 h1 {
-    font-family: serif;
+    font-family: 'Playfair Display', serif;
     font-size: calc(72px + (80 - 36) * ((100vw - 320px)/(1600 - 320)));
-    font-weight:bold;
+    font-weight:normal;
     line-height:1.3;
     letter-spacing:-1px;
     margin-top:20px;
@@ -54,10 +54,10 @@ h1 {
 /* Mobiles */
 @media all and (max-width:767px) {
     h1 { 
-    color:black;	
-    text-align: center;	
-	padding-left:4%;
-	padding-right: 6%;
+    color:black;    
+    text-align: center; 
+    padding-left:4%;
+    padding-right: 6%;
 
     }
 }
@@ -65,16 +65,16 @@ h1 {
 /* Desktop */
 @media all and (min-width:768px) {
     h1 { 
-    color:black;	
-    text-align: left;	
-	padding-left: 2%;
-	padding-right: 4%;
+    color:black;    
+    text-align: left;   
+    padding-left: 2%;
+    padding-right: 4%;
 
     } 
 }
 
 h2 {
-    font-family: serif;
+    font-family: 'Playfair Display', serif;
     font-size: calc(28px + (36 - 28) * ((100vw - 320px)/(1600 - 320)));
     font-weight:bold;
     line-height:1.3;
@@ -85,8 +85,8 @@ h2 {
 /* Mobiles */
 @media all and (max-width:767px) {
     h2 { 
-	padding-left:4%;
-	padding-right: 6%;
+    padding-left:4%;
+    padding-right: 6%;
 
     }
 }
@@ -94,15 +94,15 @@ h2 {
 /* Desktop */
 @media all and (min-width:768px) {
     h2 { 
-	padding-left: 2%;
-	padding-right: 4%;
+    padding-left: 2%;
+    padding-right: 4%;
 
     } 
 }
 
 
 h3 {
-    font-family: serif;
+    font-family: 'Playfair Display', serif;
     font-size: calc(28px + (36 - 28) * ((100vw - 320px)/(1600 - 320)));
     font-weight:bold;
     line-height:1.3;
@@ -129,7 +129,7 @@ h3 {
 }
 
 h4 {
-    font-family: serif;
+    font-family: 'Playfair Display', serif;
     font-size: calc(28px + (36 - 28) * ((100vw - 320px)/(1600 - 320)));
     font-weight:bold;
     line-height:1.3;
@@ -156,7 +156,7 @@ h4 {
 }
 
 h5 {
-    font-family: serif;
+    font-family: 'Playfair Display', serif;
     font-size: calc(28px + (36 - 28) * ((100vw - 320px)/(1600 - 320)));
     font-weight:bold;
     line-height:1.3;
@@ -186,7 +186,7 @@ h5 {
 
 /* ==== PARAGRAPHS ==== */
 p {
-    font-family: sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: calc(28px + (36 - 28) * ((100vw - 320px)/(1600 - 320)));
     font-size:16px;
     font-weight:normal;
@@ -198,8 +198,8 @@ p {
  /* Mobiles */
 @media all and (max-width:767px) {
     p { 
-	padding-left:4%;
-	padding-right:6%;
+    padding-left:4%;
+    padding-right:6%;
 
     }
 }
@@ -207,9 +207,45 @@ p {
 /* Desktop */
 @media all and (min-width:768px) {
     p { 
-	padding-left: 2%;
-	padding-right: 4%;
+    padding-left: 2%;
+    padding-right: 4%;
 
     } 
 }
+
+
+/* ==== BULLETS ==== */
+ul,ol {
+    font-family: 'Lato', sans-serif;
+    font-size: calc(28px + (36 - 28) * ((100vw - 320px)/(1600 - 320)));
+    font-size:16px;
+    font-weight:normal;
+    line-height:1.6;
+    margin-bottom:12px;
+
+}
+
+ /* Mobiles */
+@media all and (max-width:767px) {
+    li { 
+    padding-left:4%;
+    padding-right:6%;
+    margin-left: 10%;
+
+
+
+    }
+}
+
+/* Desktop */
+@media all and (min-width:768px) {
+    li { 
+    padding-left: 2%;
+    padding-right: 4%;
+    margin-left: 20%;
+
+
+    } 
+}
+
 
