--- a/portfolio/assets/css/portfolio-type.css
+++ b/portfolio/assets/css/portfolio-type.css
@@ -380,18 +380,32 @@ body { font-family: sans-serif }
 	justify-content: center;
 	background-image: url('../img/TYPE_GelsominoRoberto.jpg');
     height: 60%;
-    background-position: center center;
+    background-position: center ;
 	background-size: cover;
-	background-repeat: ;
+	background-repeat:no-repeat; 
 	margin-bottom: 35px;
+	margin-top: 35px;
 
 }
 
-.hero-block-6 h3,  {
+.img4 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;  
+  width: 60%;
+}
 
-	text-align: right;
-	color: blue;
-	color: rgba(0, 0, 0, 0.15);
+
+
+
+
+
+.hero-block-6 h2, .hero-block-6 h3 {
+	text-align: center;
+	margin: 35px;
+	color: #c2b0d6;
 	font-weight: bold;
 	font-family: sans-serif;
 }
@@ -406,6 +420,37 @@ body { font-family: sans-serif }
 	font-size: calc(15px + (42 - 15) * ((100vw - 320px)/(1600 - 320)));
 	line-height: 1.5;
 }
+
+.container h3 {
+	text-align: center;
+	margin: 35px;
+	color: grey;
+	font-weight: lighter;
+	font-family: sans-serif;
+}
+
+.container h4 {
+	font-size: 50px;
+	text-align: center;
+	margin: 35px;
+	color: grey;
+	font-family: sans-serif;
+	text-decoration: underline;
+}
+
+.container h4 {
+	font-size: calc(35px + (72 - 35) * ((100vw - 320px)/(1600 - 320)));
+	letter-spacing:4px;
+	text-transform:;
+}
+
+.container h4 {
+	font-size: calc(15px + (42 - 15) * ((100vw - 320px)/(1600 - 320)));
+	line-height: 1.5;
+}
+
+
+
 
 
 
