--- a/portfolio/assets/css/portfolio-logo.css
+++ b/portfolio/assets/css/portfolio-logo.css
@@ -323,7 +323,7 @@ body { font-family: sans-serif }
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	background-image: url('../img/homefhilA.jpg');
+	background-image: url('../img/logohome.jpg');
     height: 60%;
     background-position: center center;
 	background-size: cover;
@@ -372,6 +372,187 @@ body { font-family: sans-serif }
 	}
 	.hero-block-5 h1 { margin-bottom: 5%; letter-spacing:1px }
 }
+
+
+.hero-block-6 {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	background-image: url('../img/logohome.jpg');
+    height: 60%;
+    background-position: center ;
+	background-size: cover;
+	background-repeat:no-repeat; 
+	margin-bottom: 35px;
+	margin-top: 35px;
+
+}
+
+.img4 {
+  display: block;
+  margin-left: 35px;
+  margin-right: 35px;
+  margin-top: 10px;
+  margin-bottom: 10px;  
+  width: 60%;
+}
+
+
+/*======================= 3-COLUMN GRID =====================*/
+.container-wide {
+	background: #FFF url(); 
+	no-repeat center top;
+    margin: 0 auto;
+}
+
+/* Desktop */
+@media all and (min-width:768px) { 
+	.container-wide { width: 90%; margin: 0 auto 4% auto }
+}
+
+/* Mobiles */
+@media all and (max-width:767px) { 
+	.container-wide { width: 84%; margin: 0 auto 0 auto }
+}
+
+.flex-grid-three { 
+	display: flex 
+}
+
+/* Desktop */
+@media all and (min-width:768px) { 
+	.flex-grid-three { 
+		flex-direction: row; /* left to right */
+		text-align: left
+	}
+}
+
+/* Mobiles */
+@media all and (max-width:767px) { 
+	.flex-grid-three { 
+		flex-direction: column; /* top to bottom */
+		text-align: center
+	}
+}
+
+/* ==== COLUMNS IN THREE COLUMN GRID ======= */
+
+/* Desktop */
+@media all and (min-width:768px) { 
+	.flex-grid-three .col-gutter { width: 32% }
+	.flex-grid-three .col-gutter:nth-child(1) { margin-right: 5% }
+	.flex-grid-three .col-gutter:nth-child(2) { margin-right: 5% }
+	.flex-grid-three .col-gutter:nth-child(3) { margin-right: 5 }
+}
+
+/* Mobiles */
+@media all and (max-width:767px) { 
+	.flex-grid-three .col-gutter { width: 100% }
+	.flex-grid-three .col-gutter:nth-child(1) { margin-bottom: 10% }
+	.flex-grid-three .col-gutter:nth-child(2) { margin-bottom: 10% }
+	.flex-grid-three .col-gutter:nth-child(3) { margin-bottom: 10% }
+}
+
+
+
+
+
+
+
+.hero-block-6 h2, .hero-block-6 h3 {
+	text-align: center;
+	margin: 35px;
+	color: #c2b0d6;
+	font-weight: bold;
+	font-family: sans-serif;
+}
+
+.hero-block-6 h3 {
+	font-size: calc(35px + (72 - 35) * ((100vw - 320px)/(1600 - 320)));
+	letter-spacing:4px;
+	text-transform:;
+}
+
+.hero-block-6 h3 {
+	font-size: calc(15px + (42 - 15) * ((100vw - 320px)/(1600 - 320)));
+	line-height: 1.5;
+}
+
+.container h3,p {
+
+	font-size: 15px;
+	text-align: center;
+	margin: 5px;
+	color: grey;
+	font-family: sans-serif;
+	text-decoration: ;
+
+}
+
+.container h4 {
+	font-size: 50px;
+	text-align: center;
+	margin: 35px;
+	color: grey;
+	font-family: sans-serif;
+	text-decoration: underline;
+}
+
+.container h4 {
+	font-size: calc(35px + (72 - 35) * ((100vw - 320px)/(1600 - 320)));
+	letter-spacing:4px;
+	text-transform:;
+}
+
+.container h4 {
+	font-size: calc(15px + (42 - 15) * ((100vw - 320px)/(1600 - 320)));
+	line-height: 1.5;
+}
+
+.col-gutter h3,p {
+
+	font-size: 15px;
+	text-align: center;
+	margin: 5px;
+	color: grey;
+	font-family: sans-serif;
+	text-decoration: ;
+
+}
+
+
+
+
+
+
+
+
+/* Desktop - block height, text width and h1 bottom margin */
+@media all and (min-width:) { 
+	.hero-block-6 { height: 520px; margin-bottom: 80px }
+	.hero-block-6 h1, .hero-block-6 h2 { 
+		width: 60%; 
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.hero-block-6 h1 { margin-bottom: 1% }
+}
+
+/* Mobiles - block height, text width and h1 bottom margin */
+@media all and (max-width:767px) { 
+	.hero-block-6 { height: 340px; padding-top: 20px; margin-bottom: 40px }
+	.hero-block-6 h1, .hero-block-6 h2  { 
+		text-align: center;
+		width: 80%; 
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.hero-block-6 h1 { margin-bottom: 5%; letter-spacing:1px }
+}
+
+
+
+
 
 
 /* ========================== PAGE WRAPPER  ============================== */
@@ -442,11 +623,6 @@ body { font-family: sans-serif }
 
 
 /*======================= 3-COLUMN GRID =====================*/
-.container-wide {
-	background: #FFF url('../img/background.jpg'); 
-	no-repeat center top;
-    margin: 0 auto;
-}
 
 /* Desktop */
 @media all and (min-width:768px) { 
@@ -458,11 +634,11 @@ body { font-family: sans-serif }
 	.container-wide { width: 84%; margin: 0 auto 0 auto }
 }
 
-.flex-grid-three { display: flex }
+ { display: flex }
 
 /* Desktop */
 @media all and (min-width:768px) { 
-	.flex-grid-three { 
+	 { 
 		flex-direction: row; /* left to right */
 		text-align: left
 	}
@@ -470,7 +646,7 @@ body { font-family: sans-serif }
 
 /* Mobiles */
 @media all and (max-width:767px) { 
-	.flex-grid-three { 
+	 { 
 		flex-direction: column; /* top to bottom */
 		text-align: center
 	}
@@ -478,157 +654,40 @@ body { font-family: sans-serif }
 
 /* ==== COLUMNS IN THREE COLUMN GRID ======= */
 
-/* Desktop */
-@media all and (min-width:768px) { 
-	.flex-grid-three .col-gutter { width: 32% }
-	.flex-grid-three .col-gutter:nth-child(1) { margin-right: 4% }
-	.flex-grid-three .col-gutter:nth-child(2) { margin-right: 4% }
-	.flex-grid-three .col-gutter:nth-child(3) { margin-right: 0 }
-}
-
-/* Mobiles */
-@media all and (max-width:767px) { 
-	.flex-grid-three .col-gutter { width: 100% }
-	.flex-grid-three .col-gutter:nth-child(1) { margin-bottom: 10% }
-	.flex-grid-three .col-gutter:nth-child(2) { margin-bottom: 10% }
-	.flex-grid-three .col-gutter:nth-child(3) { margin-bottom: 10% }
-}
 
 
 /*  ===== CONTENT WITHIN COLUMNS ====*/
 
-.flex-grid-three h3 {  
-	font-weight: bold; 
-	text-align: center;
-	color: grey;
-	text-decoration: underline;
-	line-height: 1.1;
-	font-size: calc(22px + (28 - 20) * ((100vw - 320px) / (1600 - 320))); 
+.img2 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;  
+  width: 40%;
 }
 
-.flex-grid-three p { 
-	font-weight: 400;
-	color: #465E72;
-	line-height: 1.5;
-	font-size: calc(15px + (18 - 15) * ((100vw - 320px) / (1600 - 320))); 
-}
 
-.flex-grid-three img  { 
-	display:block;
-	margin-bottom:16px;
-}
 
-/* Desktop */
-@media all and (min-width:768px) { 
-	.flex-grid-three h3 { margin-bottom: 12px; min-height:54px }
-	.flex-grid-three p { margin-bottom: 8% }
-	.flex-grid-three img  { margin-bottom: 32px }
-}
-
-/* Mobiles */
-@media all and (max-width:767px) { 
-	.flex-grid-three h3 { margin-bottom: 6px }
-	.flex-grid-three p { margin-bottom: 10% }
-	.flex-grid-three img  { margin-bottom: 28px; max-width: 80%; margin-left: auto; margin-right: auto }
-}
-
-.flex-grid-three img.images-shadow { 
-    box-shadow: 5px 10px 8px #888;
-}
-
-.flex-grid-three a.fancy-link:link, 
-.flex-grid-three a.fancy-link:visited {
-	text-decoration: none;
-	padding-bottom: 2px;
-	border-bottom: solid 2px #003366;
-	color:#003366;
-}
-
-.flex-grid-three a.fancy-link:hover, 
-.flex-grid-three a.fancy-link:active {
-	text-decoration: none;
-	border-bottom: none
-}
-
-/* ==== BUTTON HYPERLINK STYLES  ==== */
-
-.flex-grid-three a.btn-solid,  
-.flex-grid-three a.btn-ghost  { 
-	text-decoration: none; 
-	text-align:center; 
-	display:inline-block;
-	font-size: calc(14px + (15 - 14) * ((100vw - 320px) / (1600 - 320))); 
-}
-
-/* Desktop */
-@media all and (min-width:768px) { 
-	.flex-grid-three a.btn-solid,  
-	.flex-grid-three a.btn-ghost  { 
-		padding: 14px 32px 14px 32px;
-		margin-bottom:20px
-	}
-}
-
-/* Mobiles */
-@media all and (max-width:767px) { 
-	.flex-grid-three a.btn-solid,  
-	.flex-grid-three a.btn-ghost  { 
-		padding: 10px 20px 10px 20px;
-		margin-bottom:20px
-	}
-}
 
 
 /* ==== SOLID BUTTON HYPERLINK STYLES  ==== */
 
-.flex-grid-three a.btn-solid { 
-	display: inline-block;
-	background-color: #003366;
-	color:#fff;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-weight: bold;
-}
 
-.flex-grid-three a.btn-solid:hover, 
-.flex-grid-three a.btn-solid:active {
-	background-color: #003366;
-	color: #fff;
-}
 
 
 /* ==== SOLID BUTTON HYPERLINK STYLES  ==== */
 
-.flex-grid-three a.btn-ghost { 
-	display: inline-block;
-	background-color: transparent;
-	color: #003366;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-weight: bold;
-	border: solid 2px #003366;
-}
 
-.flex-grid-three a.btn-ghost:hover, 
-.flex-grid-three a.btn-ghost:active {
-	background-color: #003366;
-	color: #fff;
-	border: solid 2px #003366;
-}
-
-/* ==== BUTTON HYPERLINK CORNER STYLES  ==== */
-
-.flex-grid-three a.btn-soft    { border-radius: 5px }
-.flex-grid-three a.btn-rounded { border-radius: 100px }
 
 
 
 
 /*======================= FOOTER =====================*/
 
-.container-footer { background-color: #2c3e50; margin-top: 5%;   border-top: solid 4px #003366 }
+.container-footer { background-color: #2c3e50; margin-top: 5%; border-top: solid 4px #003366 }
 
-.bg-footer { background: #2c3e50; padding: 0px 0 0px 0  }
+.bg-footer { background: #2c3e50; padding: 42px 0 48px 0  }
 
 .flex-grid-footer { display: flex }
 
