--- a/portfolio/assets/css/portfolio-2.css
+++ b/portfolio/assets/css/portfolio-2.css
@@ -459,7 +459,7 @@ body { font-family: sans-serif }
 
 /*======================= 3-COLUMN GRID =====================*/
 .container-wide {
-	background:  url(''); 
+	background-image:  url('../img/BackGroundBlack.jpg'); 
 	no-repeat center top;
     margin: 0 auto;
 }
@@ -655,9 +655,11 @@ body { font-family: sans-serif }
 
 /*======================= FOOTER =====================*/
 
-.container-footer { background-color: #2c3e50; margin-top: 5%;   border-top: solid 4px #003366 }
+.container-footer { 
+	background-image: url('../img/BackGroundBlack.jpg'); 
+	margin-top: 5%;   border-top: solid 4px #003366 }
 
-.bg-footer { background: #2c3e50; padding: 0px 0 0px 0  }
+.bg-footer { background-image: url('../img/BackGroundBlack.jpg'); padding: 0px 0 0px 0  }
 
 .flex-grid-footer { display: flex }
 
