--- a/portfolio/assets/css/portfolio-logo.css
+++ b/portfolio/assets/css/portfolio-logo.css
@@ -685,9 +685,11 @@ body { font-family: sans-serif }
 
 /*======================= FOOTER =====================*/
 
-.container-footer { background-color: #2c3e50; margin-top: 5%; border-top: solid 4px #003366 }
+.container-footer { 
+	background-image: url('../img/BackGroundBlack.jpg'); 
+	margin-top: 5%;   border-top: solid 4px #003366 }
 
-.bg-footer { background: #2c3e50; padding: 42px 0 48px 0  }
+.bg-footer { background-image: url('../img/BackGroundBlack.jpg'); padding: 0px 0 0px 0  }
 
 .flex-grid-footer { display: flex }
 
