--- a/base-5.css
+++ b/base-5.css
@@ -215,32 +215,30 @@ p {
 
 
 /* ==== BULLETS ==== */
-ul,ol {
-    font-family: sans-serif;
-    font-size: calc(28px + (36 - 28) * ((100vw - 320px)/(1600 - 320)));
-    font-size:16px;
-    font-weight:normal;
-    line-height:1.6;
-    margin-bottom:12px;
 
+ul li, ol li {
+   font-family: sans-serif;
+   font-weight: normal;
+   font-size: calc(15px + (18 - 15) * ((100vw - 320px)/(1600 - 320)));
 }
 
- /* Mobiles */
+/* Mobiles */
 @media all and (max-width:767px) {
-    li { 
-    padding-left:4%;
-    padding-right:6%;
-
-    }
+   ul, ol { margin-left: 5% }
+   ul li, ol li {
+      line-height: 1.5;
+      margin-bottom: 5%;
+   }
 }
 
 /* Desktop */
 @media all and (min-width:768px) {
-    li { 
-    padding-left: 2%;
-    padding-right: 4%;
-
-    } 
+   ul, ol { margin-left: 2% }
+   ul li, ol li {
+      line-height: 1.6;
+      margin-bottom: 2%;
+   }
 }
+
 
 
