--- a/base-1.css
+++ b/base-1.css
@@ -1,3 +1,14 @@
+* ==== BROWSER RESETS  ==== */
+* { padding: 0; margin: 0; border: 0; font-weight: normal; font-size: 16px }
+
+/* ==== PAGE WIDTH ==== */
+
+body {
+   padding-left: 20%;
+   padding-right: 20%
+}
+
+
 h1  { 
 font-size: 72px;
 color: red
@@ -27,3 +38,5 @@ color: purple
 
 
 }
+
+
